Changed pre-align message, fixed index and toolbar's btn clickable color.

--- a/app/src/Components/Align/Toolbar/ToolbarActions/ToolbarActions.component.scss
+++ b/app/src/Components/Align/Toolbar/ToolbarActions/ToolbarActions.component.scss
@@ -14,12 +14,12 @@
 		  text-align: center;
 		  font-size: 13px;
 		  font-weight: 500;
-		  background: transparent;
+		  border: 1px solid $primary;
+		  background-color: $primary;
 		  padding: 8px 24px;
 		  border-radius: 2px;
-		  border: 1px solid $gray;
-		  color: $gray;
-		  cursor: pointer $gray;
+		  color: $white;
+		  cursor: pointer;
 		  &:active, &:focus {
 			border: 1px solid $primary;
 			background-color: $primary;
@@ -32,13 +32,11 @@
 			background-color: $primary;
 			color: $white;
 		  }
-		  &.active {
-			border: 1px solid $primary;
-			background-color: $primary;
-			color: $white;
-		  }
 		  &:disabled {
 			cursor: not-allowed;
+			background-color: transparent;
+			color: $gray;
+			border: 1px solid $gray;
 			opacity: .45 !important;
 		  }
 		}
